# Pendulum

./: CMakeLists.txt  Makefile  README.md
.github/workflows/: c-cpp.yml  ci.yml
src/: CMakeLists.txt  Config.hpp  Renderer.cpp  Renderer.hpp  RenderingCtx.cpp  RenderingCtx.hpp  Timer.cpp  Timer.hpp  Vec2.hpp  Viewport.hpp  World.hpp  catpuccin.hpp  main.cpp  quantities.hpp
src/math/: Vec2.cpp  Vec2.hpp  Vec2Polar.cpp  Vec2_arithmetic.cpp  float_equal.cpp  math.hpp
src/shapes/: Sphere.hpp
test/: CMakeLists.txt
test/Vec2Test/: CMakeLists.txt  Vec2Test.cpp
